@@ -286,6 +286,12 @@ module Array = struct
     done;
     r
 
+  (* duplicated from array.ml *)
+  let map_inplace f a =
+    for i = 0 to length a - 1 do
+      unsafe_set a i (f (unsafe_get a i))
+    done
+
   let map2 f a b =
     let la = length a in
     let lb = length b in
@@ -310,6 +316,12 @@ module Array = struct
       unsafe_set r i (f i (unsafe_get a i))
     done;
     r
+
+  (* duplicated from array.ml *)
+  let mapi_inplace f a =
+    for i = 0 to length a - 1 do
+      unsafe_set a i (f i (unsafe_get a i))
+    done
 
   (* duplicated from array.ml *)
   let fold_left f x a =
